empezando maquetacion probando

--- a/index.html
+++ b/index.html
@@ -5,23 +5,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta description="pagina de recetas de cocina gastronomica">
 <meta keywork content="paella ,cocina ,degustacion,recetas,cocina valenciana">
-
+<link rel="stylesheet" href="css/style.css">
     <title>Mis Recetas</title>
 </head>
-<div>Mis recetas</div>
+<div>
+<div class="cabecera">Mis recetas</div>
+</div>
 <nav>Inicio|Recetas|Contactar</nav>
 <body>
-<main>
-      <div>receta1</div>
-      <div>receta2</div>
-      <div>receta3</div>
-      <div>receta4</div>
+<main class="padre">
+      <section>
+           <h2>receta1</h2> 
+          <img src="/imagenes/espaguetis-de-calabacin.jpg" alt="espagetis con calabzin">
+      </section>
+      <section>
+        <h2> receta2</h2> 
+        <img src="/imagenes/lubina-con-hummus-de-guisantes.jpg" alt="lubina-con-hummus-de-guisantes">
+        </section>
+    
+      <section>
+         <h2>receta3</h2>
+         <img src="/imagenes/tiramisu-express.jpg" alt="tiramisu-express">
+        </section>
+      <section>
+         <h2>receta4</h2> 
+         <img src="/imagenes/vichyssoise-de-esparragos-blancos.jpg" alt="vichyssoise-de-esparragos-blancos">
+        </section>
 </main>
-<aside>
+<aside class="contenedor">
     <h1>Menu del dia</h1>
    <div>receta6</div>
    <div>receta7</div>
    <div>receta9</div>
+
+
+
+
+
+
 <footer>footer- 2021</footer>
 
 </body>
