tercer intento maquetacion menu inicio mañana mas no sale

--- a/index.html
+++ b/index.html
@@ -13,36 +13,38 @@
   <div class="cabecera">Mis recetas</div>
 </div>
 <nav>Inicio|Recetas|Contactar</nav>
-
+<br>
 <body>
+
   <div class="container">
- 
 
-                    <section class="hijo">
-                       <h2>receta1</h2>
-                         <img  src="/imagenes/espaguetis-de-calabacin.jpg" alt="espagetis con calabzin">
-                     </section>
-                     <section class="hijo">
-                       <h2>receta2</h2>
-                          <img src="/imagenes/lubina-con-hummus-de-guisantes.jpg" alt="lubina-con-hummus-de-guisantes">
-                      </section>
-                     <section class="hijo">
-                          <h2>receta3</h2>
-                          <img src="/imagenes/tiramisu-express.jpg" alt="tiramisu-express">
-                    </section>
-                      <section class="hijo">
-                         <h2>receta4</h2>
-                         <img src="/imagenes/vichyssoise-de-esparragos-blancos.jpg" alt="vichyssoise-de-esparragos-blancos">
-                    </section>
+    <section>
+              <div class="hijo">
+                              <!--<h2>receta1</h2>-->
+                              <img class="images" src="/imagenes/espaguetis-de-calabacin.jpg" alt="espagetis con calabzin"> 1</div>
+               <div class="hijo">
+                               <!--<h2>receta2</h2>-->
+                               <img src="/imagenes/lubina-con-hummus-de-guisantes.jpg" alt="lubina-con-hummus-de-guisantes">2</div>
+              <div class="hijo">                             
+                             <!--<h2>receta3</h2>-->
+                              <img src="/imagenes/tiramisu-express.jpg" alt="tiramisu-express">3</div>
+             <div class="hijo">
+                              <!----<h2>receta4</h2>-->
+                               <img src="/imagenes/vichyssoise-de-esparragos-blancos.jpg" alt="vichyssoise-de-esparragos-blancos">4</div>
+   </section>
   
-  <aside>
-    <h1>Menu del dia</h1>
-    <div>receta6</div>
-    <div>receta7</div>
-    <div>receta9</div>
-  </aside>
+    <aside>
+      <h1>Menu del dia</h1>
+      <br><br>
+      <div>receta6</div>
+      <br>
+      <div>receta7</div>
+      <br>
+      <div>receta9</div>
+    </aside>
+  </div>
 
-</div>
+
 
 
 
