pagina mis recetas /inicio/

--- a/index.html
+++ b/index.html
@@ -9,41 +9,53 @@
   <link rel="stylesheet" href="css/style.css">
   <title>Mis Recetas</title>
 </head>
-<div>
-  <div class="cabecera">Mis recetas</div>
-</div>
-<nav>Inicio|Recetas|Contactar</nav>
+<div class="logotipo">MIS RECETAS</div>
 <br>
+<nav>
+  inicio|
+  <a href="">recetas|</a>
+  <a href="">Contactar</a>
+
+
+</nav>
+
+<br>
+
 <body>
+  <main>
+    <div class="container">
 
-  <div class="container">
+      <section>
+        <div class="hijo">
+          <h2>receta1</h2>
+          <img class="images" src="/imagenes/espaguetis-de-calabacin.jpg" alt="espagetis con calabzin">
+        </div>
+        <div class="hijo">
+          <h2>receta2</h2>
+          <img src="/imagenes/lubina-con-hummus-de-guisantes.jpg" alt="lubina-con-hummus-de-guisantes">
+        </div>
+        <div class="hijo">
+          <h2>receta3</h2>
+          <img src="/imagenes/tiramisu-express.jpg" alt="tiramisu-express">
+        </div>
+        <div class="hijo">
+          <h2>receta4</h2>
+          <img src="/imagenes/vichyssoise-de-esparragos-blancos.jpg" alt="vichyssoise-de-esparragos-blancos">
+        </div>
+      </section>
 
-    <section>
-              <div class="hijo">
-                              <!--<h2>receta1</h2>-->
-                              <img class="images" src="/imagenes/espaguetis-de-calabacin.jpg" alt="espagetis con calabzin"> 1</div>
-               <div class="hijo">
-                               <!--<h2>receta2</h2>-->
-                               <img src="/imagenes/lubina-con-hummus-de-guisantes.jpg" alt="lubina-con-hummus-de-guisantes">2</div>
-              <div class="hijo">                             
-                             <!--<h2>receta3</h2>-->
-                              <img src="/imagenes/tiramisu-express.jpg" alt="tiramisu-express">3</div>
-             <div class="hijo">
-                              <!----<h2>receta4</h2>-->
-                               <img src="/imagenes/vichyssoise-de-esparragos-blancos.jpg" alt="vichyssoise-de-esparragos-blancos">4</div>
-   </section>
-  
-    <aside>
-      <h1>Menu del dia</h1>
-      <br><br>
-      <div>receta6</div>
-      <br>
-      <div>receta7</div>
-      <br>
-      <div>receta9</div>
-    </aside>
-  </div>
+      <aside>
+        <h1>Menu del dia</h1>
+        <br><br>
+        <div>receta6</div>
+        <br>
+        <div>receta7</div>
+        <br>
+        <div>receta9</div>
+      </aside>
+    </div>
 
+  </main>
 
 
 
