--- a/_index.html
+++ b/_index.html
@@ -15,14 +15,14 @@
   <div class="container">
 
     <header id="header" class="block-center-row  mb-3">
-      <img src="/imagenes/logo1.png" alt="mis recetas">
+      <img src="imagenes/logo.png" alt="mis recetas">
     </header>
 
     <nav class="nav-main fnt-xl block-center-row mb-2">
       <ul>
         <li>inicio</li>
         <li class="separator">|</li>
-        <li><a href="">recetas</a></li>
+        <li><a href="_recetas.html">recetas</a></li>
         <li class="separator">|</li>
         <li><a href="">contactar</a></li>
       </ul>
@@ -49,19 +49,19 @@
                     </div>
              </div>
       </section>
-  <aside class="col-desk-3">
+  <aside class="col-desk-3 col-tab-4 ">
         <h2 class="txt-center head-strong mb-2">Menu del dia</h2>
         <div class="bg-ligth pad-1 rounded">
    <div class="grid">
-      <div class="col-mov-4">
+      <div class="col-mov-4 mb-2">
           <h3 class="txt-center head-strong" > 1º Plato</h3>
          <img class="img-md" src="imagenes/espaguetis-de-calabacin.jpg" alt="espaguetis">
       </div>
-      <div class="col-mov-4">
+      <div class="col-mov-4 mb-2">
         <h3 class="txt-center head-strong" > 2º Plato</h3>
        <img class="img-md" src="imagenes/lubina-con-hummus-de-guisantes.jpg" alt="Lubina">
     </div>
-    <div class="col-mov-4">
+    <div class="col-mov-4 mb-2">
       <h3 class="txt-center head-strong" > Postre</h3>
      <img class="img-md" src="imagenes/tiramisu-express.jpg" alt="Postre">
   </div>
