base de "receta.html"

--- a/receta.html
+++ b/receta.html
@@ -29,7 +29,10 @@
     </nav>
     <main>
       <article>
-        
+        <h1></h1>
+        <div>Fecha | Autor</div>
+        <div>imagen</div>
+        <div>texto</div>
       </article>
 
      
