eguimos con contactar.html

--- a/contactar.html
+++ b/contactar.html
@@ -29,10 +29,9 @@
     </nav>
     <main>
     <form class="block-center-row">
-      <div>
-         <div class="">nombre <input type="text">
-          </div>
-           <div class="">email <input type="email">
+      <div class="grid">
+         <div class=""> nombre<input type="text">
+           <div >email <input type="email">
           </div>
     <div>
        <label>mensaje</label>
