--- a/contactar.html
+++ b/contactar.html
@@ -28,26 +28,42 @@
       </ul>
     </nav>
     <main>
-    <form class="block-center-row">
-      <div class="grid">
-         <div class=""> nombre<input type="text">
-           <div >email <input type="email">
+      <form class="block-center-row fnt-xl">
+        <div class="col-desk-5 col-tab-8 col-mob-12">
+          <div class="grid mb-05">
+            <div style="text-align: right" class="col-3">
+              <label for="name">Nombre:</label>
+            </div>
+            <div class="col-9">
+              <input id="name" class="input-basic" type="text">
+            </div>
           </div>
-    <div>
-       <label>mensaje</label>
-      <textarea>
-      </textarea>
-    </div>
-      </div>
+          <div class="grid mb-05">
+            <div style="text-align: right" class="col-3">
+              <label for="email">Email:</label>
+            </div>
+            <div class="col-9">
+              <input id="email" class="input-basic" type="text">
+            </div>
+          </div>
+          <div class="grid mb-05">
+            <div style="text-align: right" class="col-3">
+              <label for="message">Mensaje:</label>
+            </div>
+            <div class="col-9">
+              <textara rows="6" id="message" class="input-basic"></textara>
+            </div>
+          </div>
+          <div class="block-center-row">
+            <button class=" fnt-lg ">Enviar mensaje</button>
+          </div>
+        </div>
+      </form>
+    </main>
 
-
-
-    </form>
-</main>
-    
 
     <footer id="footer" class="block-center-row pad-1">footer- Copyright ©</footer>
- 
+
 
 </body>
 
